# ADSAffilDB

./: .gitignore  README.md  alembic.ini  config.py  pyproject.toml  run.py
.tmp/: .coverage
.tmp/v/cache/: nodeids
adsaffildb/: app.py  database.py  models.py  normalize.py  solr.py  tasks.py  utils.py
alembic/: env.py
alembic/versions/: 00ac51e83198_empty_init.py  75098bacbee6_add_ror_table.py  8f662cf50a2f_add_solr_data_table.py  9eefa14e3211_add_affil_curation_table.py  bb9547f406c7_affildb_tables.py  c54d158658da_add_affil_norm_table.py
data/: country_parent_child.tsv
tests/: test_augmentation.py  test_normalize.py  test_utils.py
tests/stubdata/output/: test_good_match.json  test_parent_child.json
