[build-system]
requires = ["setuptools>=61.0.0"]

[tool.setuptools]
py-modules = []

[project]
name = "adsaffildb"
version = "1.0.0"
description = "Database for storage and manipulation of affiliation data for ADS/SciX curation"
license = {text = "GPL-3.0-only"}
readme = "README.md"
requires-python = ">=3.8"
authors = [ {name = "Matthew Templeton", email = "matthew.templeton@cfa.harvard.edu"} ]
maintainers = [ {name = "NASA ADS/SciX @ Center for Astrophysics | Harvard and Smithsonian", email = "ads@cfa.harvard.edu"}]
dependencies = ["adsputils==1.4.3", "alembic==1.11.2", "sqlalchemy==1.3.16"]
#dependencies = ["adsputils==1.4.3", "alembic==1.11.2", "sqlalchemy==2.0.19"]
# dependencies = ["alembic==1.11.2", "psycopg==3.1.9", "sqlalchemy==2.0.19", "SQLAlchemy-Utils==0.41.1"]

[build-system]
requires = ["setuptools==60.10.0", "wheel", "flit_core >=3.2,<4", "ppsetuptools==2.0.2"]
build-backend = "flit_core.buildapi"
